2014-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-input-url-provide-initial-content): New user option.
	(w3m-input-url): Use it.
	(w3m-input-url-next-history-element): New function.
	(w3m-url-completion-map): Bind it.
	[emacs-w3m:12345]

2014-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-add-name-anchors): Subdivide long regexp.
	[emacs-w3m:12339]

2014-06-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Compress .el files.
	* doc/Makefile.in (install): Compress info files.

	* aclocal.m4 (AC_COMPRESS_INSTALL): New function.
	* configure.in: Use it.

2014-06-11  Kevin Ryde  <user42_kevin@yahoo.com.au>

	* w3m.el (w3m-zoom-out-image, w3m-resize-image-interactive): Treat
	zoom-out percentage as inverse of zoom-in, so "in" then "out" returns
	to the original size.
	(w3m-resize-inline-image-internal): Set w3m-image-scale property to
	flonum to avoid integer round-off when resizing in and out.  Use
	`round' rather than `truncate' when calling "convert" so flonum
	round-off 99.999 is original 100%.

2014-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-content-type-alist): Don't bug out for the case where
	browse-url-browser-function is set to a function symbol that is not yet
	defined.  [emacs-w3m:12317]

2014-04-21  Michael Ernst  <mernst@cs.washington.edu>

	* w3m-util.el (w3m-beginning-of-tag, w3m-end-of-tag): Work correctly
	for the case there is only whitespace between <tag> and </tag>.

2014-03-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-markup-urls-nobreak): Don't modify textarea.
	[emacs-w3m:12308]

2014-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Update regexps for Google.

2014-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-encode-string): Encode `:' and `/'.
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

	* w3m-form.el (w3m-form-make-form-data, w3m-form-parse-and-fontify):
	Use car-less-than-car.
